<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GroupLoss</string>

    <!-- Navigation Bar String -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Messaging</item>
        <item>Workout Partners</item>
        <item>Find Partner</item>
        <item>About</item>
    </string-array>
    <string-array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </string-array>

    <!-- Action Bar Strings -->
    <string name="action_example">Example action</string>
    <string name="action_settings">Logout</string>

    <!-- Titles of Screens -->
    <string name="title_activity_main_">Main_Activity</string>
    <string name="title_activity_home__screen">Home Screen</string>
    <string name="title_activity_searching">Find Partner</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_messaging">Messages</string>
    <string name="title_activity_workoutbuddy">Workout Partners</string>

    <!-- user interface Strings -->
    <string name="username">Username</string>
    <string name="Bio">Fitness Bio:</string>
    <string name="progress">Goal Progress</string>
    <string name="target">Target Goal</string>
    <string name="favorite_exercise">Favorite Exercise </string>
    <string name="Availability">Availability Time</string>
    <string name="optimal_days">Optimal Days</string>
    <string name="workout_partner">Ideal Workout Partner:</string>
    <string name="message">Message</string>
    <string name="Skip">Skip</string>
    <string name="SearchButton">Search 4 WB</string>
    <string name="accomplishments">What do you want to accomplish?</string>
    <string name="editProfile">Edit Profile</string>

    <!-- Login Screen Strings -->
    <string name="title_activity_login">GroupLoss</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- - Profile Filler -->

    <string name="bio_filler">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Beatum, inquit. Quid ergo? Duo Reges: constructio interrete. Ille enim occurrentia nescio quae comminiscebatur; Cur iustitia laudatur? Hic ambiguo ludimur. Quod totum contra est.

Hoc tu nunc in illo probas. Huius ego nunc auctoritatem sequens idem faciam. Murenam te accusante defenderem. Quid me istud rogas? Sed ad bona praeterita redeamus.

Ille incendat? Eaedem res maneant alio modo. Restinguet citius, si ardentem acceperit.</string>
    <string name="goal_weight">lose 25lbs</string>
    <string name="exercise">Squats</string>
    <string name="days">M T TR F S</string>
    <string name="available">6:00pm-9:30pm</string>
    <string name="acomp_bio">I want to gain muscle and look good!</string>
    <string name="ideal_partner">Ideal Partner</string>
    <string name="idealBio">Ideal Partner would be someone who is always thinking about pushing themselves through the next rep</string>
    <string name="next_workout">Next Workout is:</string>
    <string name="timed_partner">with Fred</string>

    <!-- - Workout buddy tab -->
    <string name="good_Workout">Good Workout </string>
    <string name="bad_Workout">Bad Workout </string>
    <string name="delete_Friend">Delete </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
