<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

 <RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!-- The Header view -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/orange"
        android:layout_alignParentTop="true"
        android:id="@+id/Header">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_gravity="left|top"
            android:id="@+id/weightProgressBar"
            android:paddingTop="15dp"/>

        <TextView
            android:paddingBottom="10dp"
            android:layout_width="234dp"
            android:layout_height="30dp"
            android:text="@string/progress"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/GoalProgress"
            android:layout_toLeftOf="@+id/profilePic"
            android:layout_toStartOf="@+id/profilePic" />
        <ImageView
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_gravity="right|top"
            android:src="@drawable/ic_launcher"
            android:id="@+id/profilePic"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

          <TextView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:text="@string/username"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/username"
                android:layout_toStartOf="@+id/profilePic"
                android:layout_toLeftOf="@+id/profilePic"
                android:layout_below="@+id/weightProgressBar"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
</RelativeLayout>


<!-- The Body view -->
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/Header"
    android:layout_above="@+id/Footer">

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/bodyText">

    <TextView
            android:layout_width="100dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="20dp"
            android:layout_gravity="left"
            android:text="@string/Bio"
            android:id="@+id/bioTag"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:lines="10"
        android:paddingTop="10dp"
        android:text="@string/bio_filler"
        android:id="@+id/bio" />

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="25dp"
        android:layout_weight="1.5"
        android:text="@string/target"
        android:id="@+id/Target_goal"
        android:layout_gravity="center_vertical" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_weight="1"
        android:paddingTop="25dp"
        android:textStyle=""
        android:text="@string/favorite_exercise"
        android:id="@+id/Favorite_exercise"
        android:layout_gravity="right|center_vertical" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/editText_target_goal"
            android:paddingTop="7dp"
            android:layout_weight="2"
            android:inputType="text"
            android:text="@string/goal_weight"
            android:textAppearance="?android:attr/textAppearanceMedium"/>


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="text"
            android:text="@string/exercise"
            android:id="@+id/editText_favorite_exercise"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
</LinearLayout>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/Availability_time"
            android:paddingTop="15dp"
            android:layout_weight="1.5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Availability"
            />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:id="@+id/Optimal_days"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/optimal_days"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bottom_screen">


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:paddingTop="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/available"
            android:id="@+id/textView_time"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/days"
            android:id="@+id/textView_days" />

</LinearLayout>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="25dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/accomplishments" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/acomp_bio" />

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ideal_partner"/>
 </LinearLayout>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="0dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="20dp"
        android:text="@string/idealBio"
        android:id="@+id/idealbio"/>

</LinearLayout>


</LinearLayout>
</ScrollView>













<!-- The Footer view -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/orange"
    android:id="@+id/Footer">

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/editProfile"
        android:id="@+id/edit_profile"/>
 </LinearLayout>
</RelativeLayout>

<!-- The navigation drawer -->

<ListView
        android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#1a1c25"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="5dp" />

</android.support.v4.widget.DrawerLayout>