<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<!-- The main content view -->
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<!-- Header -->
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_alignParentTop="true"
      android:orientation="horizontal"
      android:background="@color/orange"
      android:id="@+id/Header">

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1.5"
          android:text="@string/next_workout"
          android:textAppearance="?android:attr/textAppearanceMedium"/>

      <TextClock
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"/>
      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1.5"
          android:text="@string/timed_partner"
          android:textAppearance="?android:attr/textAppearanceMedium"/>
  </LinearLayout>

<!-- Body-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/Header"
    android:layout_above="@+id/footer"
    android:orientation="horizontal"
    android:id="@+id/first_buddy">

<ImageButton
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:background="@drawable/ic_launcher"
    android:id="@+id/profilePic"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
   android:layout_marginTop="75dp" />

<ImageButton
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:background="@drawable/ic_action_thumb_up"
    android:layout_toEndOf="@+id/profilePic"
    android:layout_marginLeft="45dp"
    android:layout_alignBottom="@+id/profilePic"
    android:layout_toRightOf="@+id/profilePic"
    android:id="@+id/goodVote"
    android:layout_marginTop="75dp"/>

    <ImageButton
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:background="@drawable/ic_action_thumb_down"
    android:id="@+id/badVote"
    android:layout_marginTop="75dp"
    android:layout_marginLeft="55dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_navigation_close"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="75dp"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@+id/Header"
        android:layout_above="@+id/footer"
        android:id="@+id/second_buddy">
<TextView
            android:layout_width="75dp"
            android:layout_height="45dp"
            android:layout_marginLeft="90dp"
            android:text="@string/good_Workout"
            android:layout_marginTop="130dp"

            android:textAppearance="?android:attr/textAppearanceMedium"/>

<TextView
            android:layout_width="75dp"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:text="@string/bad_Workout"
            android:layout_marginTop="130dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="75dp"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:text="@string/delete_Friend"
            android:layout_marginTop="130dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </LinearLayout>







    <!-- Footer-->
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/orange"
        android:id="@+id/footer">




    </LinearLayout>


</RelativeLayout>
    
    
    
    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#1a1c25"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />


</android.support.v4.widget.DrawerLayout>