<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#ffffc449"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"></LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/username"
                android:id="@+id/username_text"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_image"
                android:layout_below="@+id/username_text"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_launcher"
                android:layout_alignLeft="@+id/username_text"
                android:layout_alignStart="@+id/username_text" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_toStartOf="@+id/username_text"
                android:layout_below="@+id/Weight_Progress_textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/progress"
                android:id="@+id/Weight_Progress_textView"
                android:layout_below="@+id/username_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/self_worth"
                android:id="@+id/about_textView"
                android:layout_below="@+id/profile_image"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/about_info_editText"
                android:lines="3"
                android:gravity="top|left"
                android:layout_below="@+id/about_textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:editable="false" />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"></RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/target"
                android:id="@+id/weightloss_amount_textView"
                android:layout_below="@+id/about_info_editText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/favorite_exercise"
                android:id="@+id/favorite_exercise_textView"
                android:layout_toEndOf="@+id/workout_partner_textview"
                android:layout_toStartOf="@+id/button2"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_above="@+id/favorite_exercise_editText"
                android:layout_alignParentStart="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/favorite_exercise_editText"
                android:layout_above="@+id/workout_time_textView"
                android:layout_toStartOf="@+id/button2"
                android:layout_alignRight="@+id/favorite_exercise_textView"
                android:layout_alignEnd="@+id/favorite_exercise_textView"
                android:layout_toEndOf="@+id/progressBar"
                android:clickable="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weightloss_amounteditText"
                android:layout_below="@+id/weightloss_amount_textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/weightloss_amount_textView"
                android:layout_alignEnd="@+id/weightloss_amount_textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Availability"
                android:id="@+id/workout_time_textView"
                android:layout_below="@+id/weightloss_amounteditText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="44dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/optimal_days"
                android:id="@+id/workout_days_textView"
                android:layout_toEndOf="@+id/message_button"
                android:layout_above="@+id/workout_days_editText"
                android:layout_alignLeft="@+id/favorite_exercise_textView"
                android:layout_alignStart="@+id/favorite_exercise_textView" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/workout_time_editText"
                android:layout_below="@+id/workout_time_textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/workout_time_textView"
                android:layout_alignEnd="@+id/workout_time_textView" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/workout_days_editText"
                android:layout_toEndOf="@+id/progressBar"
                android:layout_above="@+id/workout_partner_textview"
                android:layout_alignRight="@+id/favorite_exercise_editText"
                android:layout_alignEnd="@+id/favorite_exercise_editText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/workout_partner"
                android:id="@+id/workout_partner_textview"
                android:layout_below="@+id/workout_time_editText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="42dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText3"
                android:layout_below="@+id/workout_partner_textview"
                android:lines="3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:id="@+id/message_button"
                android:layout_toEndOf="@+id/Weight_Progress_textView"
                android:layout_below="@+id/editText3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Skip"
                android:id="@+id/button2"
                android:layout_toStartOf="@+id/profile_image"
                android:layout_below="@+id/editText3"
                android:layout_alignRight="@+id/profile_image"
                android:layout_alignEnd="@+id/profile_image" />
        </RelativeLayout>


    </FrameLayout>

    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#1a1c25"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="5dp" />


</android.support.v4.widget.DrawerLayout>